tests/ui/parser/recovered-struct-variant.stderr
error: expected `:`, found `,`
  --> $DIR/recovered-struct-variant.rs:2:10
   |
LL |     A { a, b: usize }
   |     -    ^ expected `:`
   |     |
   |     while parsing this struct

error: aborting due to 1 previous error

